--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>Webpack Starter Kit</title>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">  
+    <title>Away - Travel Tracker</title>
   </head>
   <body>
-    <h1>Webpack Starter Kit</h1>
+    <main class='main-container'>
+      <nav>
+        <h1 class='page-title'>Away</h1>
+        <div class='login-container'>
+          <label for='username' class='login-label'>username:
+            <input type='text' placeholder='username' id='username'>
+          </label>
+          <label for='password' class='login-label'>password:
+            <input type='text' placeholder='password' id='password'>
+          </label>
+        </div>
 
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
 
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
+      </nav>
+
+
+    </main>
   </body>
 </html>
