Get user trips displaying on DOM

--- a/src/index.html
+++ b/src/index.html
@@ -47,20 +47,7 @@
           <button class='active' id='active'>active trips</button>
           <button class='all-trips' id='allTrips'>all trips</button>
         </div>
-        <div class='card-container'>
-          <article class='card'>
-            <div class=img-container>
-              //image tag here 
-            </div>
-            <h3 class='trip-title'>destination</h3>
-            <p class='trip-info'>date:<br>
-              travelers:<br>
-              duration:<br>
-              lodging cost:<br>
-              flight per person:<br>
-              status:
-            </p>
-          </article>
+        <div class='card-container' id='cardContainer'>
         </div>
       </section>
     </main>
