Get user greeting working

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,7 @@
           <input type='text' placeholder='password' id='password'>
         </label>
       </div>
-      <div class='welcome-container'>
-        <h3 class='greeting'>welcome, user!</h3>
+      <div class='welcome-container' id='welcomeContainer'>
           <p class='total-cost'>your trip stats: $500 this year</p>
       </div>
     </nav>
