Get user yearly cost displaying

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,10 @@
         </label>
       </div>
       <div class='welcome-container' id='welcomeContainer'>
-          <p class='total-cost'>your trip stats: $500 this year</p>
+          
+      </div>
+      <div class='cost-container' id='costContainer'>
+        <p class='total-cost'>your trip stats: $500 this year</p>
       </div>
     </nav>
     <main class='main-container'>
