Get dropdown menu with all destination names

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,10 @@
         <label for='num-travelers' class='travelers-label'>number of travelers:<br>
           <input type='number' min='1' id='numberOfTravelers'>
         </label>
-        <button class='submit-form'>away we go!</button>
+        <label for='destination-dropdown' class='dropdown-list'>pick a destination:<br>
+          <select name='destinations' id='destinationDropdown'></select>
+        </label>
+        <button class='submit-form' id='submitForm'>away we go!</button>
       </div>
       <section class='trip-container'>
         <h2 class='trip-header'>Your Trips</h2>
