--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <title>Away - Travel Tracker</title>
   </head>
   <body>
-    <nav>
+    <nav class='nav-section'>
       <h1 class='page-title'>Away</h1>
       <div class='login-container hidden'>
         <label for='username' class='login-label'>username:
