--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class='nav-section'>
-      <h1 class='page-title'>Away</h1>
+      <h1 class='page-title'>AWAY</h1>
       <div class='login-container hidden'>
         <label for='username' class='login-label'>username:
           <input type='text' placeholder='username' id='username'>
@@ -21,33 +21,35 @@
           <input type='text' placeholder='password' id='password'>
         </label>
       </div>
-      <div class='welcome-container' id='welcomeContainer'>
-          
-      </div>
-      <div class='cost-container' id='costContainer'>
-        <p class='total-cost'>your trip stats: $500 this year</p>
+      <div class='greeting-container'>
+        <div class='welcome-container' id='welcomeContainer'>  
+        </div>
+        <div class='cost-container' id='costContainer'>
+          <p class='total-cost'>your trip stats: $500 this year</p>
+        </div>
       </div>
     </nav>
     <main class='main-container'>
       <div class='booking-container'>
         <h2>where to next?</h2>
         <label for='start-date' class='start-date-label'>start date:<br>
-          <input type='date' id='startDate' aria-required='true'>
+          <input type='date' class='start-date' id='startDate' aria-required='true'>
         </label>
         <label for='duration' class='duration-label'>duration (days):<br>
-          <input type='number' min='1' id='duration' aria-required='true'>
+          <input type='number' min='1' class='duration' id='duration' aria-required='true'>
         </label>
         <label for='num-travelers' class='travelers-label'>number of travelers:<br>
-          <input type='number' min='1' id='numberOfTravelers' aria-required='true'>
+          <input type='number' min='1' class='num-travelers' id='numberOfTravelers' aria-required='true'>
         </label>
         <label for='destination-dropdown' class='dropdown-list'>pick a destination:<br>
-          <select name='destinations' id='destinationDropdown' aria-required='true'></select>
+          <select name='destinations' class='destination' id='destinationDropdown' aria-required='true'></select>
         </label>
         <p class='error-message hidden'>Please fill out all fields and select a valid start date</p>
         <button class='submit-form' id='submitForm'>Get a Quote</button>
         <p class='price-quote hidden'>Your Trip Quote</p>
         <button class='booking-button class hidden'>Click to Get Away!</button>
       </div>
+      <!-- <div class='separator'></div> -->
       <section class='trip-container'>
         <h2 class='trip-header'>Your Trips</h2>
         <div class=button-container>
