Change title to lower case

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class='nav-section'>
-      <h1 class='page-title'>AWAY</h1>
+      <h1 class='page-title'>Away</h1>
       <div class='login-container hidden'>
         <label for='username' class='login-label'>username:
           <input type='text' placeholder='username' id='username'>
