Change page title

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class='nav-section'>
-      <h1 class='page-title'>Away</h1>
+      <h1 class='page-title'>AWAY</h1>
       <div class='login-container' id='loginContainer'>
         <label for='username' class='login-label'>username:
           <input type='text' placeholder='username' id='username'>
@@ -34,10 +34,10 @@
     <main class='main-container hidden' id='mainContainer'>
       <section class='booking-container hidden'>
         <h2>where to next?</h2>
-          <label for='start-date' class='start-date-label'>start date:<br>
+        <label for='start-date' class='start-date-label'>start date:<br>
           <input type='date' class='start-date' id='startDate' aria-required='true'>
          </label>
-          <label for='duration' class='duration-label'>duration (days):<br>
+        <label for='duration' class='duration-label'>duration (days):<br>
           <input type='number' min='1' class='duration' id='duration' aria-required='true'>
           </label>
          <label for='num-travelers' class='travelers-label'>number of travelers:<br>
