Change trip buttons

--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,9 @@
       <section class='trip-container'>
         <h2 class='trip-header'>Your Trips</h2>
         <div class=button-container>
-          <button class='pending' id='pending'>pending trips</button>
-          <button class='active' id='active'>active trips</button>
           <button class='all-trips' id='allTrips'>all trips</button>
+          <button class='approved' id='active'>approved trips</button>
+          <button class='pending' id='pending'>pending trips</button>
         </div>
         <div class='card-container' id='cardContainer'>
         </div>
