Create p tag for error handling

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <title>Away - Travel Tracker</title>
   </head>
   <body>
+    <p class='fetch-error' id='fetchError'></p>
     <nav class='nav-section'>
       <h1 class='page-title'>AWAY</h1>
       <div class='login-container' id='loginContainer'>
