Adjust font sizes and weights for readability

--- a/src/index.html
+++ b/src/index.html
@@ -34,16 +34,16 @@
       <section class='all-container hidden'>
         <section class='booking-container'>
           <h2>Where To Next?</h2>
-          <label for='start-date' class='start-date-label'>Start Date:<br>
+          <label for='start-date' class='start-date-label form'>Start Date:<br>
             <input type='date' class='start-date' id='startDate' aria-required='true'>
          </label>
-          <label for='duration' class='duration-label'>Duration (days):<br>
+          <label for='duration' class='duration-label form'>Duration (days):<br>
             <input type='number' min='1' class='duration' id='duration' aria-required='true'>
           </label>
-          <label for='num-travelers' class='travelers-label'>Number of Travelers:<br>
+          <label for='num-travelers' class='travelers-label form'>Number of Travelers:<br>
             <input type='number' min='1' class='num-travelers' id='numberOfTravelers' aria-required='true'>
           </label>
-         <label for='destination-dropdown' class='dropdown-list'>Pick a Destination:<br>
+         <label for='destination-dropdown' class='dropdown-list form'>Pick a Destination:<br>
             <select name='destinations' class='destination' id='destinationDropdown' aria-required='true'></select>
           </label>
           <p class='error-message hidden'>Please fill out all fields and select a valid start date</p>
